# msvc-cmake-qt

./: .gitignore  CMakeLists.txt  README.md
VersionHistory/: ChangeHistory.xml
src/: CMakeLists.txt
src/GUI/: CMakeLists.txt
